server side coding done

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 DATABASE_URL = mongodb+srv://devmulkalwar95:devmongopass@cluster1.d4dffdt.mongodb.net/mern-app?retryWrites=true&w=majority&appName=Cluster1
 PORT = 3000
+SECRETE_KEY = svbhjsjfgwjfgyifhhsjgvhj1341kslvhsbvbhskhjvmgkjhsgv1543
